Beaucoup de trucs

--- a/2A/SysCon/TP-Synchro/.vscode/settings.json
+++ b/2A/SysCon/TP-Synchro/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "inoeud.h": "c",
-        "appelsysteme.h": "c"
+        "appelsysteme.h": "c",
+        "scheduler.h": "c"
     }
 }
