--- a/2A/SysCon/TP-Synchro/.vscode/settings.json
+++ b/2A/SysCon/TP-Synchro/.vscode/settings.json
@@ -2,7 +2,8 @@
   "files.associations": {
     "inoeud.h": "c",
     "appelsysteme.h": "c",
-    "scheduler.h": "c"
+    "scheduler.h": "c",
+    "string.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
